<resources>
    <string name="app_name">EventsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crear_cuenta"><u>Crear cuenta</u></string>
    <string name="inicio">Inicio</string>
    <string name="icinicio">icinicio</string>
    <string name="aitor_sancho">AITOR SANCHO</string>
    <string name="perfil">Perfil</string>
    <string name="barraseparadora">barraseparadora</string>
    <string name="aitorsp">AitorSP</string>
    <string name="aitorsp_elpuig_xeill_net">aitorsp@elpuig.xeill.net</string>
    <string name="permitir_notificaciones">Permitir notificaciones</string>
    <string name="logomail">logomail</string>
    <string name="logoperfil">logoperfil</string>
    <string name="logoperfil1">logoperfil1</string>
    <string name="imagenperfil">imagenperfil</string>
    <string name="icagenda">icagenda</string>
    <string name="agenda">Agenda</string>
    <string name="barraseparadora1">barraseparadora1</string>
    <string name="gifsplash">gifsplash</string>
    <string name="logosplash">logosplash</string>
    <string name="favoritos">Favoritos</string>
    <string name="icfavoritos">TODO</string>
    <string name="login">LOGIN</string>
    <string name="inicia_sesi_n_para_continuar_disfrutando_de_eventos_incre_bles">Inicia sesión para continuar disfrutando de eventos increíbles.</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="email">Email</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="password">Password</string>
    <string name="bienvenido_de_nuevo">Bienvenido de nuevo,</string>
    <string name="logoiniciosesion">logoiniciosesion</string>
    <string name="registrate_y_empeza_a_disfrutar_de_eventos_incre_bles">Registrate y empeza a disfrutar de eventos increíbles.</string>
    <string name="crear_cuenta1">CREAR CUENTA</string>
    <string name="password1">Password</string>
    <string name="estoy_de_acuerdo_con_sus_t_rminos_y_condiciones">Estoy de acuerdo con sus términos y condiciones.</string>
    <string name="email1">Email</string>
    <string name="nombre">Nombre</string>
    <string name="crear_cuenta_boton">Crear cuenta</string>
    <string name="logoregistro">logoregistro</string>
    <string name="ichelp">ichelp</string>
    <string name="logohelp">logohelp</string>
    <string name="versi_n_1_0">VERSIÓN: 1.0</string>
    <string name="autor_aitor_sancho">AUTOR: Aitor Sancho</string>
    <string name="ltimas_novedades">Últimas novedades</string>
    <string name="imagenEvento">imagenEvento</string>
    <string name="fecha_evento">Fecha evento</string>
    <string name="prueba_evento">Prueba Evento</string>
    <string name="agendaevento">agendaevento</string>
    <string name="manolo_garc_a">Manolo García</string>
    <string name="ic_share">ic_share</string>
    <string name="flecha_atras">flecha_atras</string>
    <string name="ic_alerta">ic_alerta</string>
    <string name="_27_de_febrero">27 de febrero</string>
    <string name="palau_sant_jordi">Palau Sant Jordi</string>
    <string name="gps_agenda">gps_agenda</string>
    <string name="parc_del_f_rum">Parc del Fòrum</string>
    <string name="cirque_du_soleil">Cirque du Soleil</string>
    <string name="cal_agenda">TODO</string>
    <string name="floating_button">floating_button</string>
    <string name="a_adir_recordatorio">Añadir recordatorio</string>
    <string name="a_adir">AÑADIR</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="fecha">Fecha</string>
    <string name="evento">Evento</string>
    <string name="agenda_popup">agenda_popup</string>
    <string name="evento_popup">evento_popup</string>
    <string name="ubicacion_popup">ubicacion_popup</string>
    <string name="manolo_garc_a_fav">Manolo García</string>
    <string name="_10_de_enero_fav">10 de enero</string>
    <string name="palau_sant_jordi_fav">Palau Sant Jordi</string>
    <string name="share_fav">TODO</string>
    <string name="manolo_fav">TODO</string>
    <string name="loca_fav">TODO</string>
    <string name="susans_red_nipples">Susans Red Nipples</string>
    <string name="sala_apolo">Sala Apolo</string>
    <string name="susa_fav">susa_fav</string>
    <string name="fito_fitipaldis"><![CDATA[Fito & Fitipaldis]]></string>
    <string name="_21_de_mayo">21 de mayo</string>
    <string name="fito_fav">TODO</string>
    <string name="loc_sus_fav">loc_sus_fav</string>
    <string name="ag_sus_fav">ag_sus_fav</string>
    <string name="sus_sha_fav">sus_sha_fav</string>
    <string name="palau_sant_jordi_fito">Palau Sant Jordi</string>
    <string name="_10_de_diciembre_fav">10 de diciembre</string>
    <string name="share_fito_fav">share_fito_fav</string>
    <string name="loc_fito_fav">loc_fito_fav</string>
    <string name="ag_fito_fav">ag_fito_fav</string>
    <string name="el_tricicle_fav">El Tricicle</string>
    <string name="_21_de_octubre_fav">21 de octubre</string>
    <string name="teatro_apolo_fav">Teatro Apolo</string>
    <string name="share_teatro">TODO</string>
    <string name="loc_teatro">loc_teatro</string>
    <string name="age_teatro">age_teatro</string>
    <string name="tricicle_fav">tricicle_fav</string>
    <string name="titulo_evento">TITULO EVENTO</string>
    <string name="img_evento_mostrar">img_evento_mostrar</string>
    <string name="fav_mostrar_evento">fav_mostrar_evento</string>
    <string name="unite_with_tomorrowland_esp">Unite with Tomorrowland</string>
    <string name="parc_de_can_zam">Parc de Can Zam</string>
    <string name="_29_de_julio">29 de julio</string>
    <string name="cirque_du_soleil_esp">Cirque du Soleil</string>
    <string name="circo_esp">circo_esp</string>
    <string name="ag_ci_esp">ag_ci_esp</string>
    <string name="loc_cir_esp">loc_cir_esp</string>
    <string name="sha_cir_esp">sha_cir_esp</string>
    <string name="uni_esp">uni_esp</string>
    <string name="share_uni_esp">share_uni_esp</string>
    <string name="loc_uni_esp">loc_uni_esp</string>
    <string name="ag_un_esp">ag_un_esp</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_phasellus_condimentum_sagittis_erat_sit_amet_tincidunt_elit_maecenas_malesuada_diam_non_pretium_laoreet_mauris_erat_diam_lacinia_sed_massa_vitae_rhoncus_vehicula_nisl_suspendisse_risus_arcu_porttitor_non_nisl_imperdiet_posuere_suscipit_nisi_sed_pretium_nisi_vel_leo_ornare_convallis_nulla_vehicula_tristique_leo_pellentesque_facilisis_fringilla_neque_a_feugiat_urna_placerat_ac_sed_auctor_quis_neque_sed_lacinia_in_at_ex_condimentum_ullamcorper_elit_porta_placerat_sapien_fusce_varius_lacus_dolor_ac_pellentesque_sem_scelerisque_sed_maecenas_blandit_arcu_arcu">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus condimentum sagittis erat, sit amet tincidunt elit. Maecenas malesuada diam non pretium laoreet. Mauris erat diam, lacinia sed massa vitae, rhoncus vehicula nisl. Suspendisse risus arcu, porttitor non nisl imperdiet, posuere suscipit nisi. Sed pretium nisi vel leo ornare convallis. Nulla vehicula tristique leo. Pellentesque facilisis fringilla neque, a feugiat urna placerat ac. Sed auctor quis neque sed lacinia. In at ex condimentum, ullamcorper elit porta, placerat sapien. Fusce varius lacus dolor, ac pellentesque sem scelerisque sed. Maecenas blandit arcu arcu.</string>
    <string name="carrito3">carrito3</string>
    <string name="carrito1">carrito1</string>
    <string name="cerrar3">cerrar3</string>
    <string name="cerrar2">cerrar2</string>
    <string name="cerrar1">cerrar1</string>
    <string name="carrito2">carrito2</string>
    <string name="carrito">carrito</string>
    <string name="cerrar">cerrar</string>
    <string name="carro2">carro2</string>
    <string name="close2">close2</string>
    <string name="close1">close1</string>
    <string name="carro1">carro1</string>
    <string name="Lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id massa ac ligula scelerisque commodo vel sed lacus. Phasellus in consectetur nulla. Integer rutrum sem dignissim tortor tincidunt iaculis. Nullam ornare mi sit amet condimentum mollis. Nullam urna erat, consequat sed pellentesque rhoncus, aliquet in erat. Praesent sed quam eget felis lobortis viverra. Vivamus ac lorem nisi. Cras porttitor dolor accumsan neque aliquet, ut tempus lacus.</string>
    <string name="compra_tus_entradas"><u>Compra tus entradas</u></string>
    <string name="etiqueta">Etiqueta</string>
    <string name="mapa">mapa</string>
    <string name="etiquetaa">etiquetaa</string>
    <string name="fecha_mse">fecha_mse</string>
    <string name="loc_mse">TODO</string>
    <string name="carrito_mse">carrito_mse</string>
    <string name="evento_prubea">EVENTO PRUEBA</string>
    <string name="descripcion">DESCRIPCION</string>
    <string name="fecha_evento_1">FECHA EVENTO</string>
    <string name="a_adir_evento">AÑADIR EVENTO</string>
    <string name="descripci_n_del_evento">Descripción del evento</string>
    <string name="img_desc">img_desc</string>
    <string name="img_eve">img_eve</string>
    <string name="img_evento">img_evento</string>
    <string name="anadir_evento">Añadir Evento</string>
    <string name="inicio_btm_nav">Inicio</string>
    <string name="favoritos_btm_nav">Favoritos</string>
    <string name="agenda_btm_nav">Agenda</string>
    <string name="perfil_btm_nav">Perfil</string>
</resources>