<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="320dp"
    android:layout_gravity="center"
    android:background="@drawable/help_bg">


    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/a_adir_recordatorio"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        app:srcCompat="@drawable/ic_calendar"
        app:tint="@color/rojo_events"
        android:contentDescription="@string/agenda_popup" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="85dp"
        app:srcCompat="@drawable/ic_outline_location"
        android:contentDescription="@string/ubicacion_popup" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        app:srcCompat="@drawable/ic_outline_notifications"
        android:contentDescription="@string/evento_popup" />

    <Button
        android:id="@+id/btn_añadir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/a_adir" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:fontFamily="@font/roboto"
        android:hint="@string/evento"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="#ADADAD"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:fontFamily="@font/roboto"
        android:hint="@string/fecha"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="#ADADAD"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:fontFamily="@font/roboto"
        android:hint="@string/ubicaci_n"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="#ADADAD"
        android:autofillHints="" />

</RelativeLayout>